# home-ownership

./: .gitignore  README.md  app.py  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
lib/: __init__.py  estimate.py  model.py
notebooks/: home_cost_model.ipynb
tests/: test_estimate.py  test_model.py
ui/: __init__.py  charts.py  inputs.py  results.py  theme.py
