[project]
name = "home-ownership"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "scipy>=1.18.0",
    "streamlit>=1.59.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.1",
]
