[project]
name = "home-ownership"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.15.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "scipy>=1.18.0",
    "streamlit>=1.59.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "matplotlib>=3.11.0",
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.1",
    "pytest>=9.1.1",
]

[tool.isort]
# Keep isort's output byte-for-byte compatible with black so the two
# formatters in the dev workflow never fight over the same import block.
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path so `from lib import model` resolves without an
# editable install — `uv run pytest` then works straight from a fresh checkout.
pythonpath = ["."]
